added hammocks endpoint and data to MongoDB
